--- a/src/main/resources/templates/addressbook.html
+++ b/src/main/resources/templates/addressbook.html
@@ -10,6 +10,7 @@
             <tr>
                 <th>Name: </th>
                 <th>Phone Number:</th>
+                <th>Address:</th>
             </tr>
             <p th:text = "${addressbook.buddies}"></p>
             <tr th:each="buddy : ${addressbook.buddies}">
@@ -22,7 +23,7 @@
     <form action="#" th:action="@{/}" th:object="${newBuddy}" method="post">
         Name: <input type="text" th:field="*{name}"> <br>
         Phone Number: <input type="text" th:field="*{phoneNumber}"> <br>
-        Phone Number: <input type="text" th:field="*{address}"> <br>
+        Address: <input type="text" th:field="*{address}"> <br>
         <button type="submit">Add</button>
     </form>
 </body>
